[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kobra-connect"
version = "0.1.0"
description = "Local LAN API client for Anycubic Kobra 3 / S1 series 3D printers"
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt>=2.0,<3",
    "cryptography>=41",
    "flatbuffers>=25.12.19",
    "websocket-client>=1.9.0",
    "requests>=2.28",
    "aiohttp>=3.9",
]

[project.scripts]
kobra-oe = "kobra_connect.octoeverywhere.__main__:main"
kobra-moonraker-bridge = "kobra_connect.moonraker_bridge.__main__:main"

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]
